--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,40 @@
 :root {
   --headings-font: 'Manrope', sans-serif;
   --secondary-text: 'Open Sans', sans-serif;
+  --bark-color: #0A2640;
 }
 
 body {
-  position: relative;
+  margin: 0;
+  height: 100vh;
+}
+
+h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
 section{
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.5vw 6vw 0vw; 
+
 }
 .hero {
   display: row;
-  background-color: #0A2640;
-  padding: 10vw 6vw; 
+  max-height: 100vw;
 }
 
 header {
   display: flex;
-  background-color: transparent;
   flex-direction: row;
+  color: #fff;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  padding: 1rem 3rem;
-  position: absolute;
-  width: 100%;
-  top: 0;
+  padding: 3vw 6vw 0;
+  width: 100;
 }
 
 .content{
@@ -35,28 +42,34 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  
 }
 
 li {
   display: inline;
   margin: 0 15px;
   font-family: var(--secondary-text);
-  cursor: pointer;
+  font-size: 1.1vw;
 }
 
-
-
-
-
+a{
+  color:var(--bark-color);
+  text-decoration: none;
+  font-weight: 600;
+}
 
 .left,
 .right {
-  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
+.left{
+  width: 45%;
+}
+
 
 
 .top {
@@ -79,31 +92,44 @@ li {
 
 .logos {
   width: 70vw;
+  margin: 60px 0;
 }
 
 h1 {
   font-family: var(--headings-font);
-
-  color: #fff;
+  font-weight: normal;
+  font-size: 3vw;
+  color: #000;
 }
-
-.btn {
-  border-radius: 20px;
-  padding: 10px 25px;
-  background: #fff;
-  font-family: var(--secondary-text);
-  cursor: pointer;
-
-}
-
-.btn:active {
-  background-color:bisque;
-  transform: scale(.9);
-}
-
-
 
 p {
   color: #fff;
   font-family: var(--secondary-text);
+  color: #777777;
+  font-size: 1vw;
+
+}
+
+.btn {
+  border-radius: 22px;
+  padding: 10px 30px;
+  font-family: var(--secondary-text);
+  cursor: pointer;
+  border: 2px solid var(--bark-color);
+  font-weight: 700;
+  font-size: 1vw;
+ 
+}
+
+.btn-dark{
+  background: var(--bark-color);
+  color: #fff;
+}
+.btn-basic{
+  background-color: #fff;
+  color: var(--bark-color);
+}
+
+.btn:active {
+  transform: scale(.9);
 }
