--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,22 @@
 :root {
   --headings-font: 'Manrope', sans-serif;
   --secondary-text: 'Open Sans', sans-serif;
-  --bark-color: #0A2640;
+  --dark-color: #0A2640;
 }
 
 body {
   margin: 0;
   height: 100vh;
+}
+
+.light-them{
+  background-color: #fff;
+  color: var(--dark-color);
+}
+
+.dark-them, .dark-them h1, .dark-them p{
+  background-color: var(--dark-color);
+  color: #fff;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -15,27 +25,35 @@ h1, h2, h3, h4, h5, h6 {
 
 section{
   display: flex;
+  height: 100vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 2.5vw 6vw 0vw; 
+  padding: 3vw 6vw 0vw; 
+  
 
 }
 .hero {
   display: row;
   max-height: 100vw;
+  padding: 0 6vw; 
+
 }
 
 header {
   display: flex;
   flex-direction: row;
-  color: #fff;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
   padding: 3vw 6vw 0;
   width: 100;
 }
+
+/* .container {
+  width: 85%;
+  margin: 0 auto;
+} */
 
 .content{
   display: flex;
@@ -53,23 +71,27 @@ li {
 }
 
 a{
-  color:var(--bark-color);
+  color:var(--dark-color);
   text-decoration: none;
   font-weight: 600;
 }
 
 .left,
 .right {
+  width: 50;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.left{
+.content .left{
   width: 45%;
 }
 
+.buttons {
+  align-self: start;
+}
 
 
 .top {
@@ -106,7 +128,6 @@ p {
   color: #fff;
   font-family: var(--secondary-text);
   color: #777777;
-  font-size: 1vw;
 
 }
 
@@ -115,21 +136,122 @@ p {
   padding: 10px 30px;
   font-family: var(--secondary-text);
   cursor: pointer;
-  border: 2px solid var(--bark-color);
+  border: 2px solid var(--dark-color);
   font-weight: 700;
   font-size: 1vw;
  
 }
 
 .btn-dark{
-  background: var(--bark-color);
+  background: var(--dark-color);
   color: #fff;
 }
 .btn-basic{
   background-color: #fff;
-  color: var(--bark-color);
+  color: var(--dark-color);
 }
 
 .btn:active {
   transform: scale(.9);
 }
+
+
+
+.pics{
+  display: flex;
+  flex-direction: row;
+}
+
+.card{
+  margin: 4vw;
+}
+
+.pics img{
+  width: 17vw;
+}
+
+.connect{
+  display: flex;
+  flex-direction: row;
+}
+.connect p{
+  color: var(--dark-color)
+}
+
+
+.customer1 .left, .customer2 .right{
+  width: 80%;
+
+}
+
+.customer1 .right, .customer2 .left{
+  width: 80%;
+  justify-content: start;
+  padding: 0 5rem;
+  align-items: flex-start;
+}
+
+.check{
+  width: 20px;
+}
+
+.customer2 p{
+  width: 30rem;
+  padding: 10px 30px;
+  box-shadow:0 0 5px rgba(0,0,0,0.1);
+}
+
+.dark{
+  background-color: var(--dark-color);
+}
+.btns .btn {
+  border-radius: 50%;
+}
+
+.comments{
+  display: flex;
+  flex-direction: row;
+  
+}
+
+.com{
+  background-color: #fff;
+  margin: 20px;
+  width: 20rem;
+  min-height: 20rem;
+  border-radius: 5%;
+}
+
+.top{
+  display: flex;
+  flex-direction: row;
+  
+}
+
+
+.avatar{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 2rem ;
+}
+
+.avatar img{
+  width: 50px;
+  height: 50px;
+
+}
+
+.avatar p{
+  color: #000;
+  background-color: #fff;
+
+}
+
+
+
+
+
+
+
+
