--- a/styles/style.css
+++ b/styles/style.css
@@ -31,15 +31,155 @@ section{
   justify-content: center;
 }
 
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 70px 0 20px 0;
-  width: 100%;
+.hero {
+  padding: 70px 0 0 0;
+
 }
+
+.header {
+  position: fixed;
+  width: 100%;
+  top:0;
+  left:0;
+  /* z-index: 50; */
+  /* display: flex;
+  flex-direction: row; */
+  justify-content: space-between;
+}
+
+
+.header_list {
+  display: flex;
+  position: relative;
+}
+
+.header_list li {
+  margin: 0 15px;
+  font-family: var(--secondary-text);
+}
+
+
+@media (max-width: 767px ){
+
+  .header_body {
+    height: 90px;
+  }
+  .header_burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    position: relative;
+    z-index: 3;
+  }
+
+  .header_burger span {
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    
+    transition: all 0.3s ease 0s; 
+  }
+
+  .header_burger.active::before {
+    transform: rotate(45deg);
+    top: 9px;
+    
+  }
+
+  .header_burger.active span {
+    transform: scale(0);
+  }
+
+  .header_burger.active::after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+  }
+
+  .header_menu.active {
+    top:0;
+    transition: all 0.3s ease 0.3s;
+  }
+
+  .header_burger::before,
+  .header_burger::after {
+    content: '';
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    transition: all 0.3s ease 0s; 
+
+  }
+
+  .header_logo {
+    position: relative;
+    z-index: 4;
+    width: 10vw;
+    
+  }
+  .header_burger::before {
+    top:0;
+  }
+
+  .header_burger::after {
+    bottom: 0;
+  }
+
+  .header_menu{
+    position: fixed;
+    top: -120%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:aquamarine;
+    padding: 160px 0 0 0 ;
+  }
+
+  .header_list {
+    display: block;
+  }
+
+  .header_list li {
+    margin: 0 0 20px 0; 
+  }
+}
+
+.header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  background-color: #65E4A3;
+  z-index:2;
+}
+
+.header_list {
+  position: relative;
+  z-index: 2;
+}
+
+.header_body {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  height: 130px;
+  align-items: center;
+}
+
+/* .header .container {
+
+  align-items: center;
+  height: 100%;
+
+  background-color:aquamarine;
+} */
 
 .container {
   width: 85%;
@@ -66,12 +206,6 @@ header {
 
 .content .btn {
   margin: 0.5rem;
-}
-
-li {
-  display: inline;
-  margin: 0 15px;
-  font-family: var(--secondary-text);
 }
 
 a{
@@ -108,10 +242,6 @@ a{
 
 .bottom2 {
   width: 53%;
-}
-
-.logo {
-  width: 10vw;
 }
 
 .logos {
