--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,10 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+
 :root {
   --headings-font: 'Manrope', sans-serif;
   --secondary-text: 'Open Sans', sans-serif;
@@ -9,44 +16,53 @@ body {
   height: 100vh;
 }
 
-.light-them{
+.light-them {
   background-color: #fff;
   color: var(--dark-color);
 }
 
-.dark-them, .dark-them h1, .dark-them p{
+.dark-them,
+.dark-them h1,
+.dark-them p {
   background-color: var(--dark-color);
-  color: #fff; 
+  color: #fff;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 
-section{
+section {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.hero {
-  padding: 70px 0 0 0;
+.services,
+.enterprise {
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
 
 }
+
 
 .header {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  top:0;
-  left:0;
   /* z-index: 50; */
   /* display: flex;
   flex-direction: row; */
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
-
 
 .header_list {
   display: flex;
@@ -58,106 +74,58 @@ section{
   font-family: var(--secondary-text);
 }
 
-
-@media (max-width: 767px ){
-
-  .header_body {
-    height: 90px;
-  }
-  .header_burger {
-    display: block;
-    position: relative;
-    width: 30px;
-    height: 20px;
-    position: relative;
-    z-index: 3;
-  }
-
-  .header_burger span {
-    position: absolute;
-    background-color: #fff;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    top: 9px;
-    
-    transition: all 0.3s ease 0s; 
-  }
-
-  .header_burger.active::before {
-    transform: rotate(45deg);
-    top: 9px;
-    
-  }
-
-  .header_burger.active span {
-    transform: scale(0);
-  }
-
-  .header_burger.active::after {
-    transform: rotate(-45deg);
-    bottom: 9px;
-  }
-
-  .header_menu.active {
-    top:0;
-    transition: all 0.3s ease 0.3s;
-  }
-
-  .header_burger::before,
-  .header_burger::after {
-    content: '';
-    background-color: #fff;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    left: 0;
-    transition: all 0.3s ease 0s; 
-
-  }
-
-  .header_logo {
-    position: relative;
-    z-index: 4;
-    width: 10vw;
-    
-  }
-  .header_burger::before {
-    top:0;
-  }
-
-  .header_burger::after {
-    bottom: 0;
-  }
-
-  .header_menu{
-    position: fixed;
-    top: -120%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color:aquamarine;
-    padding: 160px 0 0 0 ;
-  }
-
-  .header_list {
-    display: block;
-  }
-
-  .header_list li {
-    margin: 0 0 20px 0; 
-  }
+.header_logo {
+  position: relative;
+  z-index: 5000;
+  width: 5rem;
 }
+
+.hero {
+  padding: 200px 0 0 0;
+}
+
+.pics {
+  display: flex;
+  flex-direction: row;
+}
+
+
+@media (max-width: 1030px) {
+  .logos {
+    display: none;
+  }
+
+  .hero {
+    padding: 100px 0 0 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+
+}
+
+@media (max-width: 1500px) {
+
+  .services,
+  .enterprise {
+    padding: 10%;
+    text-align: center;
+  }
+
+
+}
+
+
 
 .header::before {
   content: '';
   position: absolute;
   top: 0;
-  left:0;
+  left: 0;
   width: 100%;
-  height: 100%;
+  height: 80%;
   background-color: #65E4A3;
-  z-index:2;
+  z-index: 2;
 }
 
 .header_list {
@@ -183,15 +151,16 @@ section{
 
 .container {
   width: 85%;
-  margin: 0 auto; 
-} 
+  margin: 0 auto;
+}
+
 /* .services {
   margin: 0;
   padding: 0;
   width: 100%;
 } */
 
-.content{
+.content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -208,8 +177,8 @@ section{
   margin: 0.5rem;
 }
 
-a{
-  color:var(--dark-color);
+a {
+  color: var(--dark-color);
   text-decoration: none;
   font-weight: 600;
 }
@@ -222,13 +191,13 @@ a{
   align-items: center;
 }
 
-.content .left{
+.content .left {
   width: 45%;
 }
 
 .top {
   width: 97%;
-  margin: 0 0 2vh 0;
+  margin: 0 0 1rem 0;
 }
 
 .buttons {
@@ -237,7 +206,7 @@ a{
 
 .bottom1 {
   width: 39%;
-  margin-right: 2vw;
+  margin-right: 1.45em;
 }
 
 .bottom2 {
@@ -245,14 +214,14 @@ a{
 }
 
 .logos {
-  width: 70vw;
+  width: 90%;
   margin: 60px 0;
 }
 
 h1 {
   font-family: var(--headings-font);
   font-weight: normal;
-  font-size: 3vw;
+  font-size: 3rem;
   color: #000;
 }
 
@@ -269,17 +238,19 @@ p {
   cursor: pointer;
   border: 2px solid var(--dark-color);
   font-weight: 700;
-  font-size: 1.2vw;
+  font-size: 1.2rem;
 }
 
 .btn-dark {
   background: var(--dark-color);
   color: #fff;
 }
+
 .btn-basic {
   background-color: #fff;
   color: var(--dark-color);
 }
+
 .btn-green {
   background-color: #65E4A3;
   color: var(--dark-color);
@@ -289,30 +260,35 @@ p {
   transform: scale(.9);
 }
 
-.pics {
-  display: flex;
-  flex-direction: row;
+.services,
+.enterprise {
+  margin-left: calc(-50 + 50%);
 }
+
 
 .card {
-  margin: 4vw;
+  margin: 3rem;
 }
 
-.pics img {
-  width: 17vw;
+.pics .pictures {
+  width: 90%;
+  min-width: 200px;
 }
 
 .connect {
   display: flex;
   flex-direction: row;
+  min-height: 900px;
 }
 
-.customer1, .customer2{
-  padding-bottom: 5rem;;
+.customer1,
+.customer2 {
+  padding-bottom: 5rem;
+  ;
 }
 
 .customer1 {
-   padding-bottom: 0;
+  padding-bottom: 0;
 }
 
 .customer2 {
@@ -324,21 +300,36 @@ p {
   align-items: center;
 }
 
-.customer1 .left, .customer2 .right{
-  width: 80%;
+.customer1 .left,
+.customer2 .right {
   position: relative;
+  z-index: -1;
 }
+
 .connect .we {
   margin: 3rem 0;
+}
+
+
+.man,
+.woman {
+  width: 100%
+}
+
+.income,
+.pie {
+  width: 80%
 }
 
 .income {
   position: absolute;
   bottom: 0;
-  transform: translateY(33%);
+  transform: translateY(43%);
   left: 35%;
 }
-.customer1 .right, .customer2 .left{
+
+.customer1 .right,
+.customer2 .left {
   width: 100%;
   justify-content: start;
   padding: 0 5rem;
@@ -347,15 +338,12 @@ p {
 
 .customer2 .left {
   padding: 5rem 0 0 0;
-
 }
 
-
-
-.pie{
+.pie {
   position: absolute;
   bottom: 0;
-  transform: translateY(45%);
+  transform: translateY(38%);
   right: 25%;
 }
 
@@ -369,24 +357,25 @@ p {
   align-items: center;
   width: 30rem;
   padding: 10px 30px;
-  box-shadow:0 0 5px rgba(0,0,0,0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .customer1 .dark {
   color: #fff;
 }
 
-.icons{
+.icons {
   margin-right: 15px;
 }
 
-.dark{
+.dark {
   background-color: var(--dark-color);
 }
 
 .btns img {
   width: 1.5rem;
 }
+
 .comments {
   display: flex;
   flex-direction: row;
@@ -397,10 +386,8 @@ p {
   margin: 20px;
   width: 20rem;
   border-radius: 5%;
-  height:fit-content;
+  height: fit-content;
 }
-
-
 
 .btns {
   width: 100%;
@@ -418,10 +405,10 @@ p {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 2rem 2rem ;
+  padding: 2rem 2rem;
 }
 
-.author{
+.author {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -429,14 +416,17 @@ p {
 }
 
 .person {
-  margin-left: 1rem;;
-}
-.avatar img {
-  width: 50px;
-  height: 50px;
+  margin-left: 1rem;
+  ;
 }
 
-.avatar p, h3 {
+.avatar img {
+  width: 100%;
+  height: 100%;
+}
+
+.avatar p,
+h3 {
   color: #000;
   background-color: #fff;
   font-family: var(--secondary-text);
@@ -444,79 +434,95 @@ p {
   margin: 0;
 }
 
-h3{
-  font-size: 24px;;
+h3 {
+  font-size: 24px;
+  ;
 }
- .btns .btn{
+
+.btns .btn {
   width: 3rem;
   height: 3rem;
   padding: 0;
-} 
+}
 
-.text{
+.text {
   display: flex;
+  align-items: flex-start;
   flex-direction: row;
   width: 80%;
   padding-top: 3rem;
 }
 
-.questions{
-   width: 90%;
-   margin-left: 5rem;
+.help {
+  padding: 0;
 }
-.qustions p{
+
+.help img {
+  width: 90%;
+}
+
+.questions {
+  width: 90%;
+  margin-left: 5rem;
+}
+
+.qustions p {
   color: #000;
 }
-.text h1{
-  font-size: 42px; 
+
+.text h1 {
+  font-size: 42px;
 }
+
 .blog p {
   color: #000;
 }
 
+
 .blog {
   padding-bottom: 3rem;
+  height: fit-content;
 }
 
-.blog h1{
-  width: 80%;
+.blog h1 {
 
   text-align: center;
 }
+
 .blog .author img {
-  width: 50px;;
-  margin-right: 1rem ;
+  width: 50px;
+  margin-right: 1rem;
 }
 
 .category {
   font-family: var(--secondary-text);
-  display: flex; 
+  display: flex;
   flex-direction: row;
   margin-top: 1rem;
 }
 
-.blog .card{
+.blog .card {
   margin-bottom: 2rem;
 }
 
-.date{
+.date {
   font-weight: normal;
   margin-left: 1rem;
   color: #777777;
 }
 
-.last h1{
-  width: 50%;
+.last h1 {
   text-align: center;
 }
 
 .last {
-  height: 24rem;;
+  height: 24rem;
+  ;
 }
 
 input {
   border-radius: 22px;
-  margin:0;
+  margin: 0;
   width: fit-content;
   border: 0;
   width: 300px;
@@ -529,7 +535,8 @@ input::placeholder {
 }
 
 form {
-  margin-right: 1rem;;
+  margin-right: 1rem;
+  ;
 }
 
 .email {
@@ -538,14 +545,19 @@ form {
 }
 
 footer {
-  display: inline-flex;
+  margin: 0;
+  display: flex;
+  width: 100%;
 }
 
-footer .left{
+footer .left {
+  display: flex;
+  flex-direction: row;
   align-items: flex-start;
   padding: 10rem 10rem 3rem 0;
   width: 20%;
-  color:lightgray;
+  color: lightgray;
+  margin-left: 0;
 }
 
 footer .right {
@@ -564,7 +576,7 @@ footer ul li {
   margin: 10px 0;
 }
 
-ul {
+footer ul {
   margin: 0 80px;
   padding: 0;
 }
@@ -587,4 +599,190 @@ ul {
   padding: .4rem;
   border-radius: 50%;
   font-size: 0;
+}
+
+
+@media (max-width: 850px) {
+
+  .pics {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .last {
+    padding: 20% 0;
+  }
+
+  .customer1 .left,
+  .customer2 .right {
+    width: 70%;
+    height: fit-content;
+  }
+
+  .customer1 .right{
+    padding: 20% 0 0 0;
+
+  } 
+
+  .connect {
+    display: block;
+    
+    padding: 0;
+  }
+}
+
+
+@media (max-width: 767px) {
+  .help img {
+    display: none;
+  }
+
+  .text {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .questions {
+    
+    padding: 10% 0 0 0;
+    margin: 0;
+  }
+
+  .hero .right {
+    display: none;
+  }
+
+  .email {
+    display: block;
+  }
+
+  form {
+    margin-bottom: 1rem;
+    ;
+  }
+
+  .customer1 .left,
+  .customer2 .right {
+    display: none;
+  }
+
+  .enterprise {
+    display: none;
+  }
+
+  .hero .left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 100%;
+  }
+
+  .header {
+    height: 20%;
+  }
+
+  body.lock {
+    overflow: hidden;
+  }
+
+  .header_body {
+    height: 90px;
+  }
+
+  .header_burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    position: relative;
+    z-index: 3;
+  }
+
+  .header_burger span {
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+
+    transition: all 0.3s ease 0s;
+  }
+
+  .header_burger.active::before {
+    transform: rotate(45deg);
+    top: 9px;
+
+  }
+
+  .header_burger.active span {
+    transform: scale(0);
+  }
+
+  .header_burger.active::after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+  }
+
+  .header_menu.active {
+    top: 0;
+    transition: all 0.3s ease 0.3s;
+  }
+
+  .header_burger::before,
+  .header_burger::after {
+    content: '';
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    transition: all 0.3s ease 0s;
+  }
+
+  .header_burger::before {
+    top: 0;
+  }
+
+  .header_burger::after {
+    bottom: 0;
+  }
+
+  .header_menu {
+    position: fixed;
+    top: -120%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: aquamarine;
+    padding: 160px 0 0 0;
+  }
+
+  .header_list {
+    display: block;
+  }
+
+  .header_list li {
+    margin: 0 0 20px 0;
+  }
+
+  .header_list li {
+    font-size: 36px;
+    ;
+  }
+}
+
+
+@media (max-width: 1180px) {
+
+.services .card3 {
+  display: none;
+}
+.enterprise .com3 {
+  display: none;
+}
+
+.blog .card3 {
+  display: none;
+}
 }
